[package]
name = "rust_tutorial"
version = "0.1.0"
edition = "2021"
default-run = "default" # the name of the executable

[dependencies]
rand = "0.8.5"

[[bin]]
name = "default"  
path = "src/5.rs"

# [[bin]]
# name = "binary1"
# path = "src/bin/binary1.rs"   

# [[bin]]
# name = "binary2"
# path = "src/bin/binary2.rs"

# cargo run --bin binary1 or cargo run --bin binary2

